// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp4,
.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp4 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp4>.e1duuirp5,
.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp4>.e1duuirp5 {
  fill: #4f0599;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <label
        class="e1duuirp3 e1g1zfwd0 cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
        for="test-undefined"
      >
        <div
          class="cache-1p2voni-IconContainer e1duuirp4"
        >
          <svg
            class="e1duuirp5 etwatq50 cache-5ixesp-StyledIcon-sizeStyles-StyledIcon"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="cache-egzmkg-StyledChildrenContainer e1duuirp2"
        />
        <input
          aria-checked="false"
          class="cache-18s3dma-StyledRadio e1duuirp1"
          id="test-undefined"
          name="test"
          tabindex="0"
          type="radio"
        />
      </label>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-16v2aqw-StyledError e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp4,
.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp4 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp4>.e1duuirp5,
.cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp4>.e1duuirp5 {
  fill: #4f0599;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <label
        class="e1duuirp3 e1g1zfwd0 cache-1muavls-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
        for="checked-undefined"
      >
        <div
          class="cache-1p2voni-IconContainer e1duuirp4"
        >
          <svg
            class="e1duuirp5 etwatq50 cache-1yojixf-StyledIcon-sizeStyles-StyledIcon"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        <div
          class="cache-egzmkg-StyledChildrenContainer e1duuirp2"
        />
        <input
          aria-checked="true"
          checked=""
          class="cache-18s3dma-StyledRadio e1duuirp1"
          id="checked-undefined"
          name="checked"
          tabindex="0"
          type="radio"
        />
      </label>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-16v2aqw-StyledError e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-17wwrut-StyledText-variantStyles-StyledRadioContainer-disabledClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-12489do-StyledIcon-sizeStyles-StyledIcon {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-12489do-StyledIcon-sizeStyles-StyledIcon.cache-12489do-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <label
        class="e1duuirp3 e1g1zfwd0 cache-17wwrut-StyledText-variantStyles-StyledRadioContainer-disabledClass"
        disabled=""
        for="test-undefined"
      >
        <div
          class="cache-1p2voni-IconContainer e1duuirp4"
        >
          <svg
            class="e1duuirp5 etwatq50 cache-12489do-StyledIcon-sizeStyles-StyledIcon"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="cache-egzmkg-StyledChildrenContainer e1duuirp2"
        />
        <input
          aria-checked="false"
          aria-disabled="true"
          class="cache-18s3dma-StyledRadio e1duuirp1"
          disabled=""
          id="test-undefined"
          name="test"
          style="pointer-events: none;"
          type="radio"
        />
      </label>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-16v2aqw-StyledError e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
